<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Main name -->
    <string name="app_name" translatable="false">Sudoku Awesome Game</string>

    <!-- Button names -->
    <string name="continueBtn">Continue</string>
    <string name="newGameBtn">New Game</string>
    <string name="authorBtn">Author</string>
    <string name="recordsBtn">Top 10</string>
    <string name="checkBtn">Check</string>
    <string name="resetBtn">Clear</string>
    <string name="generateBtn">Generate</string>
    <string name="clearCellBtn">Clear</string>

    <!-- Author fields -->
    <string name="author">Author</string>
    <string name="authorValue" translatable="false">Just Kitsu</string>
    <string name="contacts">Contacts</string>
    <string name="contactsValue" translatable="false">mail@kitsu.me</string>
    <string name="textSeparator" translatable="false">&#160;:&#160;&#160;</string>

    <!-- In game text-->
    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="exhaustion_check">Checks ended</string>
    <string name="won">You won!</string>
    <string name="apply">Apply</string>
    <string name="mistake">Check again, you have mistake(s)</string>
    <string name="not_enough_results">Not enough data</string>
    <string name="seconds">sec.</string>

    <!-- Java code consts -->
    <string name="last_game" translatable="false">lastgame</string>
    <string name="restore" translatable="false">isGameSavedFlag</string>

</resources>