<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_vertical">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/aboutFont"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSeparator"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/aboutFont"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorValue"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/aboutFont"
            android:layout_column="3"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/aboutFont"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSeparator"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/aboutFont"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactsValue"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/aboutFont"
            android:layout_column="3"/>
    </TableRow>

</TableLayout>