<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:orientation="vertical"
          android:id="@+id/game"
          android:layout_gravity="center_horizontal"
          android:background="#FFF">


    <GridView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/grid"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:numColumns="9"
        android:background="@drawable/background"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_btn">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBtn"
            android:id="@+id/btnCheck"
            android:singleLine="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetBtn"
            android:id="@+id/btnClear"
            android:singleLine="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generateBtn"
            android:id="@+id/btnGenerate"
            android:singleLine="true"/>

    </LinearLayout>

</LinearLayout>